<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ibmplexbold"
            android:text="@string/unlimited_volume_bundle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/ibmplexreg"
            android:text="Rs.2000/month"
            android:textColor="?attr/colorSecondary" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:id="@+id/linear1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/txtPrice"
            android:weightSum="10"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"

                android:layout_height="wrap_content">
                <TextView
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/ibmplexbold"
                    android:text="@string/speed"/>
                <TextView
                    android:textColor="?attr/colorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtSpeed"
                    android:textSize="13sp"
                    android:fontFamily="@font/imbplexmediem"
                    android:text="@string/_10mpbs"/>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent"
                android:background="?attr/colorSecondary"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"

                android:layout_height="wrap_content">
                <TextView
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/ibmplexbold"
                    android:text="Volume"/>
                <TextView
                    android:textColor="?attr/colorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVolume"
                    android:textSize="12sp"
                    android:fontFamily="@font/imbplexmediem"
                    android:text="Unlimited"/>
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:id="@+id/btnUpgrade"
            android:layout_alignParentBottom="true"
            android:backgroundTint="?attr/colorSecondary"
            android:fontFamily="@font/ibmplexreg"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="Request for Upgrade"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:cornerRadius="0dp" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>

