<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".fragments.AddComplatintFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtRegComplaint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register a Complaint"
            android:textSize="20sp"
            android:fontFamily="@font/montserratbold"
            android:layout_marginTop="10dp"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="5dp"
            android:hint="@string/name"
            app:errorEnabled="true"

            android:textColorHint="?attr/colorOnSecondary"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="?attr/colorSecondary"
            app:endIconMode="clear_text"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@+id/txtRegComplaint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:inputType="text"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="5dp"
            android:hint="@string/phone_number"
            app:errorEnabled="true"
            android:textColorHint="?attr/colorOnSecondary"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="?attr/colorSecondary"
            app:endIconMode="clear_text"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@+id/nameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:inputType="number"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="5dp"
            android:hint="@string/address"
            app:errorEnabled="true"

            android:textColorHint="?attr/colorOnSecondary"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="?attr/colorSecondary"
            app:endIconMode="clear_text"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@+id/phoneLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:inputType="text"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="5dp"
            android:hint="@string/select_location"
            app:errorEnabled="true"

            android:textColorHint="?attr/colorOnSecondary"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="?attr/colorSecondary"
            app:endIconMode="clear_text"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@+id/addressLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:inputType="text"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio"
            android:orientation="vertical"
            android:transitionGroup="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/locationLayout">

            <LinearLayout
                android:layout_width="match_parent"
               android:weightSum="2"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_weight="0.4"
                    android:text="Modem Problem"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:layout_weight="1"
                    android:text="Gaming lags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="match_parent">
                <RadioButton
                    android:text="Slow Browsing"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:text="Frequent Disconnection"
                    android:layout_weight="1"
                    android:layout_gravity="end"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="5dp"
            android:hint="@string/select_location"
            app:errorEnabled="true"

            android:textColorHint="?attr/colorOnSecondary"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="?attr/colorSecondary"
            app:endIconMode="clear_text"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@+id/radio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:inputType="text|textMultiLine"
                android:lines="5"
                android:maxLines="10"
                android:layout_gravity="top"
                android:gravity="top"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:text="@string/send_complaint"
            android:textAllCaps="false"
            app:elevation="5dp"
            android:id="@+id/btnSendComplaint"
            android:textColor="@color/white"
            app:backgroundTint="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="15dp"
            app:cornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@+id/descLayout" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progressBar"
            style="@style/SpinKitView.Wave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            app:SpinKit_Color="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>